Write experiment report

--- a/实验报告/物理实验.md
+++ b/实验报告/物理实验.md
@@ -1,6 +1,5 @@
 # 选题背景
 物理教材上学习了运用信息技术完成实验的样例，想要尝试设计教材上没有的动力学实验。目前拥有的实验器材仅有手机及其传感器，可以获知的已学的动力学物理量仅为瞬时加速度（线速度传感器）、瞬时角速度（陀螺仪传感器）。根据目前的物理及数学知识，决定选择根据传感器测量数据，绘制手机在同一水平面上的运动轨迹。
-
 # 研究过程
 ## 获取数据
 将手机平行水平地面放置在平整的箱子上，开始记录数据，用手向沿手机所在水平面向前方向推动一定距离，转向，再次推动一定距离，停止记录。
@@ -12,8 +11,11 @@ $$
 v_t=v_{t-1}+a_tT\\
 x_t=x_{t-1}+v_{t-1}t+\frac12a_tt^2
 $$
-[主要代码](https://gitee.com/flt6/experiment/tree/master/latest/main.cpp)
+[主要代码](https://gitee.com/flt6/experiment/blob/master/latest/main.cpp)
 # 研究内容摘要
+轨迹：
+自原点出发向x轴负半轴、y轴正半轴，与x轴、夹角约37°方向近似直线运动到约(-11,7)处，逆时针旋转约90°，向前沿近似直线运动到约(-25,-15)处结束。经检验与实际运动轨迹相近。
+![图片](https://gitee.com/flt6/experiment/raw/master/20220114_1/img.png)
 
 # 成果呈现形式
-
+轨迹图片、轨迹点坐标、计算机程序。
